@@ -2,18 +2,31 @@ plugins {
     java
 }
 
-group = "org.glavo.kala"
-version = "0.1.0" + "-SNAPSHOT"
+allprojects {
+    group = "org.glavo.kala"
+    version = "0.1.0" + "-SNAPSHOT"
 
-repositories {
-    mavenCentral()
-}
+    apply {
+        plugin("java-library")
+    }
 
-dependencies {
-    testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
-}
+    repositories {
+        mavenCentral()
+    }
 
-tasks.test {
-    useJUnitPlatform()
+    dependencies {
+        testImplementation("org.junit.jupiter:junit-jupiter-api:5.8.1")
+        testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.8.1")
+    }
+
+    tasks.compileJava {
+        options.release.set(19)
+        options.compilerArgs.addAll(listOf(
+            "--enable-preview",
+        ))
+    }
+
+    tasks.test {
+        useJUnitPlatform()
+    }
 }
